service/tests/requests/snapshots/categories/can_create_category_and_normalize_name@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":1,\"pid\":\"PID\",\"name\":\"winter wear\",\"slug\":\"winter-wear\",\"imageLink\":\"https://cdn.example.com/categories/winter.png\",\"description\":\"Warm layers\",\"parentId\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}",
)
