service/tests/requests/snapshots/categories/can_create_category_when_slug_already_exists@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":1,\"pid\":\"PID\",\"name\":\"homeware\",\"slug\":\"t-shirts-1\",\"imageLink\":\"https://cdn.example.com/categories/homeware.png\",\"description\":\"Duplicate seeded slug\",\"parentId\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}",
)
