service/tests/requests/snapshots/categories/can_create_category_with_description@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":1,\"pid\":\"PID\",\"name\":\"accessories\",\"slug\":\"accessories\",\"imageLink\":\"https://cdn.example.com/categories/accessories.png\",\"description\":\"Bags and belts\",\"parentId\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}",
)
