service/tests/requests/snapshots/categories/can_create_category_with_unformatted_slug@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":1,\"pid\":\"PID\",\"name\":\"homeware\",\"slug\":\"new-homeware\",\"imageLink\":\"https://cdn.example.com/categories/homeware.png\",\"description\":null,\"parentId\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}",
)
