service/tests/requests/snapshots/categories/can_create_category_without_description@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":1,\"pid\":\"PID\",\"name\":\"hats\",\"slug\":\"hats\",\"imageLink\":\"https://cdn.example.com/categories/hats.png\",\"description\":null,\"parentId\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}",
)
