service/tests/requests/snapshots/categories/can_create_category_without_slug@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":1,\"pid\":\"PID\",\"name\":\"new accessories\",\"slug\":\"new-accessories\",\"imageLink\":\"https://cdn.example.com/categories/accessories.png\",\"description\":null,\"parentId\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}",
)
