service/tests/requests/snapshots/categories/can_delete_category@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    204,
    "{\"id\":1005,\"pid\":\"PID\",\"name\":\"homeware\",\"slug\":\"homeware\",\"imageLink\":\"https://cdn.example.com/categories/homeware.png\",\"description\":\"Textiles and decorative objects\",\"parentId\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":\"DATE\"}",
)
