service/tests/requests/snapshots/categories/can_get_tshirts_category@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"id\":101,\"pid\":\"PID\",\"name\":\"t-shirts\",\"slug\":\"t-shirts\",\"imageLink\":\"https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=900&q=80\",\"description\":null,\"parentId\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}",
)
