service/tests/requests/snapshots/categories/can_list_categories@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"data\":[{\"id\":103,\"pid\":\"PID\",\"name\":\"shoes\",\"slug\":\"shoes\",\"imageLink\":\"https://images.unsplash.com/photo-1542291026-7eec264c27ff?auto=format&fit=crop&w=900&q=80\",\"description\":null,\"parentId\":null,\"parentName\":null,\"productCount\":1,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"id\":102,\"pid\":\"PID\",\"name\":\"trousers\",\"slug\":\"trousers\",\"imageLink\":\"https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?auto=format&fit=crop&w=900&q=80\",\"description\":null,\"parentId\":null,\"parentName\":null,\"productCount\":1,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"id\":101,\"pid\":\"PID\",\"name\":\"t-shirts\",\"slug\":\"t-shirts\",\"imageLink\":\"https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=900&q=80\",\"description\":null,\"parentId\":null,\"parentName\":null,\"productCount\":1,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}],\"pagination\":{\"page\":1,\"limit\":20,\"totalItems\":3,\"totalPages\":1,\"hasNext\":false,\"hasPrev\":false}}",
)
